hphp/test/slow/async/return-annotation-3.php.expectf
Fatal error: Return type hint for async method C::f() must be awaitable in %s on line 2
